--- a/pages/index.html
+++ b/pages/index.html
@@ -17,6 +17,9 @@
         </ul>
     </nav>
 </header>
+    <footer>
+      <p>© GitRailway</p>
+    </footer>
 <main>
     <section id="top">
         <p>
